src/test/deca/codegen/valid/Objet/testSelectNew.deca
// Description:
//    tests division flottante sur 0; débordement lors d'opération arithmétique sur flottants.
//
// Resultats:
//
//      10
//
//
// Historique:
//    cree le 20/01/2021

class A {
    int x = 1;
    int m() {
    return x;
    }
}

{
println( 10* (new A()).m());
}
